--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ python-telegram-bot==13.12
 python_dotenv==0.20.0
 requests==2.28.1
 cloudipsp==1.0.3
+django-phonenumber-field[phonenumbers]==6.1.0
+phonenumbers==8.12.49
